# winccua-pgwire-interface

./: .gitignore  CLAUDE.md  COUNT_FIX_FINAL.md  Cargo.toml  README.md  TLS_SETUP.md  TROUBLESHOOTING.md  catalog.db  debug_query_parsing.rs  generate_certs.sh  run_server.sh  sdl.gql  setenv.sh  test_actual_username.sh  test_aggregation.sql  test_count_fix.md  test_interval_queries.sql  test_user_query.sql  wincc_pg_catalog.db
catalog/: catalog.py  pg_catalog_sqlite.py  wincc_pg_catalog.db
src/: auth.rs  catalog.rs  constants.rs  datafusion_handler.rs  information_schema.rs  keep_alive.rs  main.rs  pgwire_server.rs  query_handler.rs  simple_server.rs  sql_handler.rs  tables.rs  tls.rs
src/graphql/: client.rs  mod.rs  types.rs
src/pg_protocol/: authentication.rs  connection_handler.rs  message_handler.rs  mod.rs  query_execution.rs  response.rs  startup.rs
src/query_handler/: active_alarms_handler.rs  filter.rs  logged_alarms_handler.rs  logged_tag_values_handler.rs  mod.rs  pg_class_handler.rs  pg_constraint_handler.rs  pg_functions_handler.rs  pg_namespace_handler.rs  pg_proc_handler.rs  pg_stat_activity_handler.rs  pg_type_handler.rs  tag_list_handler.rs  tag_values_handler.rs  util.rs
tests/: .gitignore  README_parallel_testing.md  requirements.txt  run_parallel_tests.sh  test_auth_fix.sh  test_connection.sh  test_connection_loop.py  test_connection_parameters.sh  test_date_functions.py  test_debug.sh  test_default_endtime.sql  test_empty_query.py  test_env.sh  test_env_template.sh  test_equals_operator.sh  test_extended_query.sh  test_grafana_debug.sh  test_hang_fix.sh  test_like_validation.sh  test_like_wildcards.sh  test_logged_detailed.sh  test_logged_like.sh  test_logged_minimal.sh  test_loggedtagvalues.sh  test_loggedtagvalues_simple.sh  test_logging_tags.sh  test_md5_auth.py  test_md5_auth.sh  test_md5_computation.py  test_message_parsing.sh  test_no_auth.sh  test_parse_validation.sh  test_password_auth.sh  test_psql.sh  test_scram_computation.py  test_scram_sha256.sh  test_server.py  test_single_loggedtagvalues.sh  test_single_query.sh  test_sorting.sh  (+4 more)
tests/kotlin/: pom.xml  queries.txt
tests/kotlin/src/main/kotlin/: Main.kt
tests/python/: test_server.py
