[package]
name = "winccua-pgwire-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
# PostgreSQL wire protocol
pgwire = "0.26"

# SQL parsing
sqlparser = "0.52"

# HTTP client for GraphQL
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Additional utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
async-trait = "0.1"