[package]
name = "winccua-pgwire-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
# PostgreSQL wire protocol
pgwire = "0.26"


# HTTP client for GraphQL
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Additional utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
async-trait = "0.1"
hex = "0.4"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.22"
rand = "0.8"
datafusion = "49.0.0"
arrow = "55.2.0"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"
